java records and code cleanup