@@ -1,6 +1,5 @@
 package kits.bioinfo.motif;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -11,7 +10,8 @@ public class GreedyMotifFinderTest {
 
     @Test
     public void test() {
-        List<DnaSequence> sequences = Arrays.asList(new DnaSequence("GGCGTTCAGGCA"), new DnaSequence("AAGAATCAGTCA"), new DnaSequence("CAAGGAGTTCGC"),
+        List<DnaSequence> sequences = List.of(new DnaSequence("GGCGTTCAGGCA"), 
+                new DnaSequence("AAGAATCAGTCA"), new DnaSequence("CAAGGAGTTCGC"),
                 new DnaSequence("CACGTCAATCAC"), new DnaSequence("CAATAATATTCG"));
 
         System.out.println(GreedyMotifFinder.findMotifs(sequences, 3));
