@@ -1,14 +1,15 @@
 package kits.bioinfo.ucsandiego.course2.part1;
 
+import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toList;
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import kits.bioinfo.math.graph.EulerianCycleFinder;
 import kits.bioinfo.math.graph.Graph;
@@ -25,10 +26,10 @@ public class Challenge6 {
     public static void main(String[] args) throws IOException {
         Graph<Integer> graph = GraphParser.buildIntGraphFromAdjacencyStrings(Files.readAllLines(Paths.get("input/dataset_203_2.txt")));
         List<Integer> cycle = EulerianCycleFinder.findEulerianCycle(graph);
-        String cycleString = cycle.stream().map(n -> n.toString()).collect(Collectors.joining("->"));
+        String cycleString = cycle.stream().map(n -> n.toString()).collect(joining("->"));
 
         // check
-        List<Integer> nodes = Arrays.asList(cycleString.split("->")).stream().map(s -> Integer.valueOf(s)).collect(Collectors.toList());
+        List<Integer> nodes = Arrays.asList(cycleString.split("->")).stream().map(s -> Integer.valueOf(s)).collect(toList());
         Set<Edge<Integer>> set = new HashSet<>();
 
         for (int i = 0; i < nodes.size() - 1; i++) {
@@ -43,7 +44,7 @@ public class Challenge6 {
             set.add(edge);
         }
 
-        Files.write(Paths.get("./output/output_203_2.txt"), Collections.singletonList(cycleString));
+        Files.write(Paths.get("./output/output_203_2.txt"), List.of(cycleString));
     }
 
 }
