@@ -3,7 +3,6 @@ package kits.bioinfo.ucsandiego.course2.part1;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.List;
 
 import kits.bioinfo.assembly.KmerCompositioner;
@@ -24,7 +23,7 @@ public class Challenge8 {
         KmerGraph graph = KmerGraph.buildDeBrujinGraph(SequenceReader.readDnaSequencesPerLine("input/dataset_203_6.txt"));
         List<DnaSequence> path = EulerianPathFinder.findEulerianPath(graph);
         DnaSequence sequence = KmerCompositioner.readSequenceFromComposition(path);
-        Files.write(Paths.get("./output/output_203_6.txt"), Collections.singletonList(sequence.toString()));
+        Files.write(Paths.get("./output/output_203_6.txt"), List.of(sequence.toString()));
     }
 
 }
